[gd_scene load_steps=7 format=3 uid="uid://l6vdkqdrvj30"]

[ext_resource type="StyleBox" uid="uid://7buvuwmgk64w" path="res://Scenes/File_Window/styles/button_hovered.tres" id="1_5ih8o"]
[ext_resource type="Script" uid="uid://btnyth0tftjfp" path="res://Scripts/File/secret_window.gd" id="1_anb4x"]
[ext_resource type="StyleBox" uid="uid://logjjgskff0g" path="res://Scenes/File_Window/styles/button_pressed.tres" id="2_anb4x"]
[ext_resource type="StyleBox" uid="uid://c0ofyqwicgijc" path="res://Scenes/File_Window/styles/button_unpressed.tres" id="2_ickwv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_anb4x"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.466181, 0.466181, 0.466181, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ickwv"]
bg_color = Color(0.873298, 0.873298, 0.873298, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Secret Window" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_anb4x")

[node name="Window" type="Window" parent="."]
title = "File Security"
initial_position = 4
size = Vector2i(250, 150)
unresizable = true

[node name="ColorRect" type="ColorRect" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Window"]
offset_left = 7.0
offset_top = 7.0
offset_right = 242.0
offset_bottom = 86.0
theme_override_styles/panel = SubResource("StyleBoxFlat_anb4x")

[node name="VBoxContainer" type="VBoxContainer" parent="Window/PanelContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="Window/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(175, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/selection_color = Color(0, 0, 0.905882, 0.521569)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ickwv")
placeholder_text = "Please enter the password"
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
secret = true

[node name="HBoxContainer" type="HBoxContainer" parent="Window"]
offset_left = 8.0
offset_top = 101.0
offset_right = 243.0
offset_bottom = 126.0
size_flags_vertical = 6

[node name="con" type="Button" parent="Window/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/focus = ExtResource("2_anb4x")
theme_override_styles/hover_pressed = ExtResource("2_anb4x")
theme_override_styles/hover_mirrored = ExtResource("1_5ih8o")
theme_override_styles/hover = ExtResource("1_5ih8o")
theme_override_styles/pressed = ExtResource("2_anb4x")
theme_override_styles/normal = ExtResource("2_ickwv")
text = "Confirm"

[node name="den" type="Button" parent="Window/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/focus = ExtResource("2_anb4x")
theme_override_styles/hover_pressed = ExtResource("2_anb4x")
theme_override_styles/hover_mirrored = ExtResource("1_5ih8o")
theme_override_styles/hover = ExtResource("1_5ih8o")
theme_override_styles/pressed = ExtResource("2_anb4x")
theme_override_styles/normal = ExtResource("2_ickwv")
text = "Cancel"

[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
[connection signal="pressed" from="Window/HBoxContainer/con" to="." method="_on_con_pressed"]
[connection signal="pressed" from="Window/HBoxContainer/den" to="." method="_on_den_pressed"]
